--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.18'
     implementation group: 'org.springframework', name: 'spring-core', version: '5.3.17'
+    implementation 'au.com.dius.pact.provider:spring:4.3.6'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
