--- a/service/build.gradle
+++ b/service/build.gradle
@@ -12,9 +12,7 @@ dependencies {
     implementation project(":core")
     implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.18'
     implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'
-
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
-
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.13.2'
     implementation group: 'org.springframework', name: 'spring-context', version: '5.3.18'
     implementation group: 'org.springframework', name: 'spring-core', version: '5.3.18'
@@ -22,8 +20,10 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.3.13'
     implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.5.1'
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.5.1'
+
 }
 
 test {
